<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignInFragment"
    android:padding="20dp"
    android:background="@color/colorPrimary">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inply_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/profile"
        app:startIconTint="@color/colorText"
        app:cursorColor="@color/colorText"
        app:placeholderTextColor="@color/colorText"
        android:textColorHint="@color/colorText"
        app:boxStrokeColor="@color/colorText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/inply_password"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.3">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inpedt_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_email"
            android:paddingStart="48dp"
            android:textColor="@color/colorText"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:ellipsize="end"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inply_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        app:startIconDrawable="@drawable/lock"
        app:startIconTint="@color/colorText"
        app:cursorColor="@color/colorText"
        app:passwordToggleTint="@color/colorText"
        app:placeholderTextColor="@color/colorText"
        android:textColorHint="@color/colorText"
        app:boxStrokeColor="@color/colorText"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/inply_email"
        app:layout_constraintBottom_toTopOf="@id/txtvw_forgot_password">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inpedt_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="48dp"
            android:hint="@string/enter_email"
            android:textColor="@color/colorText"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:ellipsize="end"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/txtvw_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/colorText"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/inply_password"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/btn_login"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:background = "@drawable/inactive_navigate_button_background"
        android:textColor="@color/colorPrimary"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/txtvw_forgot_password"
        app:layout_constraintBottom_toTopOf="@id/txtvw_dont_have_an_account"/>
    <TextView
        android:id="@+id/txtvw_dont_have_an_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_an_account"
        android:paddingVertical="10dp"
        android:textAlignment="textEnd"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorText"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintEnd_toStartOf="@id/txtvw_sign_up"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/txtvw_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textColor="@color/colorText"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txtvw_dont_have_an_account"
        app:layout_constraintTop_toTopOf="@id/txtvw_dont_have_an_account"
        app:layout_constraintBottom_toBottomOf="@id/txtvw_dont_have_an_account"
        app:layout_constraintBaseline_toBaselineOf="@id/txtvw_dont_have_an_account"/>

</androidx.constraintlayout.widget.ConstraintLayout>